[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus-temp-humidity"
version = "1.0.0"
description = "Modbus RS485 温湿度传感器查询程序"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Modbus Developer"}
]
keywords = ["modbus", "rs485", "temperature", "humidity", "sensor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pymodbus>=3.0.0"
]

[project.scripts]
modbus-temp-humidity = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
